--- a/exact.css
+++ b/exact.css
@@ -12,6 +12,7 @@
 .first-section {
     background-image: url('./img/home-bg-1.jpg');
     height: 800px;
+    background-attachment: fixed;
 
 }
 
@@ -45,7 +46,7 @@
     height: 800px;
     background-color: rgba(0, 0, 0, 0.7);
     color: var(--white);
-    padding-top: 25%;
+    padding-top: 20%;
 }
 
 .what-we {
@@ -53,34 +54,7 @@
     color: var(--white);
 }
 
-.carousel {
-    background-image:
-        linear-gradient(45deg,
-            rgba(0, 0, 0, 1),
-            rgba(0, 0, 0, 0.7)),
-        url('./img/parallax-bg-4.jpg');
-    width: 100%;
-    height: 500px;
-    color: #fff;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    opacity: 0.9;
-}
 
-.carousel-item {
-    float: none;
-    width: 100%;
-    display: block;
-    margin: 150px auto;
-    text-align: center;
-    transition: width 4s linear 1s;
-}
-
-.carousel-indicators [data-bs-target="#carouselExampleIndicators"] {
-    border-radius: 100%;
-    width: 13px;
-    height: 13px;
-}
 
 .design {
     color: grey;
@@ -104,8 +78,6 @@
 
 .third-section {
     background-image: url('./img/parallax-bg-3.jpg');
-    height: 100%;
-    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 6rem;
@@ -115,11 +87,11 @@
     background: rgba(255, 255, 255, 0.8);
     height: 100%;
     width: 100%;
-    padding: 5rem 15rem;
+    padding: 5rem 30rem;
 }
 
 .video-img {
-    width: 50%;
+    width: 100%;
     height: 100%;
     vertical-align: middle;
 }
@@ -133,7 +105,7 @@
 }
 
 .pictures {
-    width: 300px;
+    width: 250px;
     height: 300px;
 }
 
@@ -144,6 +116,30 @@
 .pictures:hover {
     background-color: black;
 }
+.picture {
+    position: relative;
+}
+
+
+.detail {
+    width: 100%;
+    height: 300px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transition: 0.6s;
+}
+
+.detail:hover {
+    opacity: 1;
+    color: white;
+}
 
 .fifth-section {
     background-image: url('./img/parallax-bg-2.jpg');
@@ -151,6 +147,7 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .fifth-inner {
@@ -159,14 +156,36 @@
     color: var(--white);
     padding: 5rem;
 }
-
 .progress {
-    margin-bottom: 2rem;
-}
-
-.progress-bar {
-    background-color: var(--green);
-}
+    height: 20px !important;
+    background: #e6e6e6 !important;
+    overflow: visible;
+ }
+  
+ .progress-bar {
+    background: var(--green);
+    font-size: 12px;
+    color: #000 !important;
+    font-weight: 600;
+    position: relative;
+    overflow: visible !important;
+   border-radius: 100px;
+ }
+  
+ .progress-bar span {
+    position: absolute;
+    right: 0;
+    top: -20px;
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--white);
+ }
+  
+  
+ .progress-line {
+    width: 100%;
+    margin-bottom: 20px;
+ }
 
 .happy {
     padding: 3rem;
@@ -183,6 +202,7 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .seventh-inner {
@@ -218,12 +238,24 @@
 .digital {
     font-size: 12px;
 }
-
+.branding{
+    font-size: 12px;
+}
+.print {
+    font-size: 12px;
+}
 .digital:hover {
     background-color: var(--green);
     color: var(--white);
 }
-
+.branding:hover {
+    background-color: var(--green);
+    color: var(--white);
+}
+.print:hover {
+    background-color: var(--green);
+    color: var(--white);
+}
 .button {
     background-color: lightgray;
     text-align: center;
@@ -262,6 +294,31 @@
     right: 0;
 }
 
+.ninth-section{
+    background-image:
+        linear-gradient(45deg,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0.7)),
+        url('./img/parallax-bg-4.jpg');
+    width: 100%;
+    height: 500px;
+    color: #fff;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    opacity: 0.9;
+}
+.ninth{
+    padding: 100px 0;
+}
+.carousel-indicators [data-bs-target="#carouselExampleIndicators"] {
+    border-radius: 100%;
+    width: 13px;
+    height: 13px;
+}
+.wrap {
+    position: relative;
+}
 .text {
     width: 100%;
     height: 100%;
@@ -286,38 +343,6 @@
     width: 317px;
 }
 
-.wrap {
-    position: relative;
-}
-
-.picture {
-    position: relative;
-}
-
-.pictures {
-    width: 270px;
-}
-
-.detail {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    opacity: 0;
-    transition: 0.6s;
-}
-
-.detail:hover {
-    opacity: 1;
-    color: white;
-}
-
 .eleventh-section {
     background-image:
         linear-gradient(45deg,
@@ -325,7 +350,7 @@
             rgba(255, 255, 255, 0.7)),
         url('./img/parallax-bg-6.jpg');
     width: 100%;
-    height: 100%;
+    height: 500px;
     color: black;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -333,10 +358,25 @@
     opacity: 0.9;
 }
 
+.carousel-indicators [data-bs-target="#carouselExample"] {
+    border-radius: 100%;
+    width: 10px;
+    height: 10px;
+    background-color: black;
+}
+.client {
+    position: relative;
+}
+.clients {
+    position: absolute;
+    top: 9rem;
+}
+
 .twelvth-section {
     background-image: url('./img/parallax-bg-7.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     color: var(--white);
     height: 500px;
 }
@@ -416,6 +456,7 @@
     background-image: url('./img/parallax-bg-8.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     color: var(--white);
     height: 500px;
 }
@@ -477,4 +518,77 @@
     right: 3rem;
     z-index: 2;
     color: var(--white);
+}
+
+
+@media screen and (max-width: 576px)  {
+    .inside-first{
+        margin: 4rem 0;
+    }
+    .inside-second{
+        padding: 0;
+    }
+    .third-inner{
+        padding: 95px 0px;
+    }
+    .video-img{
+        width: 90%;
+    }
+    .pictures {
+        width: 400px;
+        height: 500px;
+    }
+    .picture {
+        position: relative;
+    }
+
+    .detail{
+        position: absolute;
+        width: 93%;
+        height: 92%;
+    }
+    .detail:hover {
+        opacity: 1;
+        color: white;
+        margin-left: 16px;
+    }
+    .fifth-inner{
+        height: 100%;
+    }
+    .happy{
+        padding: 0;
+    }
+    .seventh-inner{
+        height: 500px;
+    }
+    .progress{
+        width: 100%;
+    }
+    .branding{
+    margin-left: 80px;
+    }
+    .print{
+        margin-left: 33px;
+    }
+    .one{
+        width: 400px;
+        margin: 0  15px 15px 15px;
+    }
+    .text{
+        width: 400px;
+        height: 270px;
+    }
+    .text:hover{
+        margin-left: 16px;
+    }
+    .client{
+        position: relative;
+    }
+    .clients{
+        position: absolute;
+        top: 25rem;
+    }
+    .eleventh-section{
+        height: 700px;
+    }
 }
